fixed pagination text align

--- a/src/_includes/css/page.css
+++ b/src/_includes/css/page.css
@@ -61,6 +61,10 @@
   }
 }
 
+.page-pagination-prev {
+  text-align: right;
+}
+
 .page-pagination-next {
   margin-left: auto;
 }
